# mcp-server-nacl

./: .gitignore  README.md  pyproject.toml
src/av_lstm/: main.py
src/av_lstm/requests/: get_daily_adjusted.py
src/forex_lstm/: main.py
src/forex_lstm/requests/: forex.py
src/forex_lstm/response_data/: GBP_JPY_2000_2005.json  GBP_JPY_2005_2010.json  GBP_JPY_2005_2025.json  GBP_JPY_2010_2015.json  GBP_JPY_2015_2020.json  GBP_JPY_2020_2025.json  currencies.json
src/forex_lstm/types/: granularity.py  instrument.py
src/mcp_server_nacl/: server.py
src/mcp_server_nacl/test/: test_server.py
src/nacl_service/: server.py
src/nacl_service/test/: test_nacl_service.py
