[project]
name = "mcp-servers"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]===1.2.0rc1",
    "pynacl>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nacl_service"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
