[project]
name = "forex-lstm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "mcp[cli]===1.2.0rc1",
    "numpy>=2.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forex_lstm"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
